--- a/AdvancedC-Features.CSharp.csproj
+++ b/AdvancedC-Features.CSharp.csproj
@@ -12,15 +12,12 @@
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows:5</UnityBuildTarget>
     <UnityVersion>5.5.0f3</UnityVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -99,6 +96,9 @@
     <Compile Include="Assets\3 - Abstract Classes\Scripts\Weapons\PulseCannon.cs" />
     <Compile Include="Assets\3 - Abstract Classes\Scripts\Weapons\Shotgun.cs" />
     <Compile Include="Assets\3 - Abstract Classes\Scripts\Weapons\Weapon.cs" />
+    <Compile Include="Assets\5 - Networking\Scripts\LocalUser.cs" />
+    <Compile Include="Assets\5 - Networking\Scripts\NetworkUser.cs" />
+    <Compile Include="Assets\5 - Networking\Scripts\Player.cs" />
     <Compile Include="Assets\~GolfWithManny\Scripts\Controller.cs" />
     <Compile Include="Assets\~GolfWithManny\Scripts\Player.cs" />
     <Compile Include="Assets\~Minesweeper3D\Scripts\Block.cs" />
